# Test-Sigma-Assignment

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: design.md  scope.md  setup.md
examples/sample-output/: blast-radius.md
scripts/: bootstrap_gitea.sh  reset_demo.sh  smoke_test.sh
src/blast_agent/: cli.py
src/blast_agent/code_index/: __init__.py  indexer.py  pr_diff.py  repository.py  symbols.py  ui_anchors.py
src/blast_agent/contracts/: __init__.py  code.py  common.py  crawl.py  links.py  report.py  requirements.py
src/blast_agent/crawl/: __init__.py  actions.py  agent.py  artifact_store.py  extractor.py  policy.py  state_identity.py
src/blast_agent/evals/: __init__.py  metrics.py  runner.py  stability.py
src/blast_agent/graph/: __init__.py  absence.py  queries.py  schema.py  writer.py
src/blast_agent/ingest/: __init__.py  loader.py  requirement_extractor.py
src/blast_agent/linking/: __init__.py  candidates.py  scorer.py
src/blast_agent/llm/: __init__.py  anthropic.py  factory.py  gemini.py
src/blast_agent/reasoning/: __init__.py  impact.py  report_renderer.py
templates/: blast_radius.md.j2
tests/fixtures/diffs/: pr-37045.diff
tests/integration/: test_agent_login_flow.py  test_analyze_pr_live.py  test_extractor_live.py  test_graph_load.py  test_index_pr_live.py
tests/unit/: test_actions.py  test_anthropic_client.py  test_contracts.py  test_evals.py  test_impact_report.py  test_import.py  test_ingest.py  test_linking.py  test_llm_policy.py  test_pr_diff.py  test_state_identity.py  test_symbols_anchors.py
(+14 files in other folders)
