[project]
name = "blast-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "neo4j>=6.2.0",
    "playwright>=1.61.0",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.scripts]
blast-agent = "blast_agent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blast_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
